style scrollbar to fix toc position

--- a/nanoc/content/assets/css/screen/blog/scrollbar_toc.less
+++ b/nanoc/content/assets/css/screen/blog/scrollbar_toc.less
@@ -3,6 +3,7 @@
 #scrollbar-toc {
   @arrow-w: 10px;
   @arrow-h: 10px;
+  @h: 16px;
   @trigger-area-w: 100px;
 
   position: fixed;
@@ -18,6 +19,9 @@
     position: absolute;
     right: 0;
     white-space: nowrap;
+    height: @h;
+    line-height: @h;
+    font-size: @h;
 
     &::after {
       content: ' ';
